<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28sp"
            android:text="Login User"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:hint="@string/enter_username" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="28sp"
            android:text="@string/password"
            android:textAlignment="center"
            android:textSize="22sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_margin="15sp"
            android:text="@string/log_in" />

        <Button
            android:id="@+id/goto_register_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="22sp"
            android:text="@string/register" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>